# kube-gym

./: .gitignore  README.md  pyproject.toml
api/kube_dos/: Chart.yaml  values.yaml
api/kube_dos/templates/: _helpers.tpl  deployment.yaml  service.yaml
api/kube_dos/templates/tests/: test-connection.yaml
scripts/: main.py
src/: compose.yaml  main.py
src/agents/green/: dockerfile  main.py
src/agents/red/: main.py  requirements.txt
src/api_service/: README.md  dockerfile  main.py  requirements.txt
src/envs/: kube_gym.py
src/k8s/: deployment.yaml  networkpolicy.yaml  service.yaml
src/scripts/: auto_deployment.sh
