[tool.poetry]
name = "kube-gym"
version = "0.1.0"
description = ""
authors = ["Thomas Summerfield"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
kubernetes = "^31.0.0"
fastapi = {extras = ["standard"], version = "^0.115.4"}
pydantic = "^2.9.2"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
